add paginacao no statement